---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: ????
  Bugfixes:
    - Crash on missing player inventory
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2024-10-23
  Features:
    - Recognizes dynamic fluid inputs, such as on Assemblers
  Changes:
    - Support for Factorio 2.0
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2024-09-14
  Features:
    - Support non-pipe ghosts with fluidboxes as connectable neighbors
  Changes:
    - Replace custom vector lookup with util.direction_vectors
    - Add LuaLS annotations to source for all types and functions
    - Improve source comments
    - Improve source naming
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2023-12-09
  Bugfixes:
    - Crash with mods that add underground pipe recipes with fluid ingredients
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2023-12-09
  Bugfixes:
    - Crash with mods that add underground pipe recipes with byproducts
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2023-11-02
  Bugfixes:
    - Crash when checking invalid fluid-turret fluidbox
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2023-06-18
  Features:
    - Replace ghost pipes
    - Place ghost pipes when placing ghost underground pipes
    - Place ghosts/pipes when placing near non-pipe entities with fluid connections
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2021-12-28
  Changes:
    - Version bump for Factorio 1.1